# ai-agent-tools-skills-demo-with-frontend

./: .gitignore  README.md  SKILL_FEEDBACK.md  pyproject.toml
backend/: main.py  routes.py  session_manager.py
frontend/: api_client.py  app.py  components.py  config.py  styles.py
src/agent/: agent.py  skills.py  tools.py
