[project]
name = "city-explorer-frontend"
version = "0.1.0"
description = "City Explorer AI Agent with Streamlit Frontend"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
]

[project.scripts]
city-explorer = "src.agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "backend", "frontend"]

[dependency-groups]
dev = []
